--- a/views/client/product.pug
+++ b/views/client/product.pug
@@ -2,9 +2,9 @@ extends clientLayout
 
 block content
     .index
-        .container-fluid
-            .row
-                .col-md-8
+        .container
+            .row(style='align-items:baseline')
+                .col-8
                     h2= product.name
                     .productImg
                         img(src=''+product.imgPath)
@@ -13,11 +13,13 @@ block content
                     h3 Description de produit:
                     .description
                         p=product.description
-                .addToCart.col-md-4
+                .addToCart.col-4(style='vertical-align:text-bottom;align-items:baseline')
                     form(action='/addToCart' method='POST')
                         label() Quantite:
                         input(type='hidden',value=''+product._id, name='productId')
-                        input(type='number',value=1,name='quantity',min='1',max='20')
+                        .col-xs-2
+                            input(type='number',value=1,name='quantity',min='1',max='20' style='max-width:100%')
+
                         button(type='submit') Ajouter Au Panier
 
     br
