updates small things in design

--- a/views/client/clientLayout.pug
+++ b/views/client/clientLayout.pug
@@ -93,7 +93,7 @@ html
                         select.custom-select
                             option(selected='1') Gabon
 
-                        
+
 
                 .modal-footer
                     button.btn.btn-secondary(type='button', data-dismiss='modal') Close
@@ -177,7 +177,7 @@ html
                     if(data=='Success'){
                         location.reload()
                     }else{
-                        alert('Please try again')
+                        alert('Mot de passe ou email incorrecte')
                     }
                 })
             })
