new features and fixes

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -12,9 +12,9 @@ body {
 }
 
 .search-container{
-    display:flex;
+    /* display:flex;
     justify-content: center;
-    align-items: center;
+    align-items: center; */
 }
 .shoppingCart{
     position:relative;
