--- a/views/client/products.pug
+++ b/views/client/products.pug
@@ -10,3 +10,5 @@ block content
                         p= product.name
                         img(src=product.imgPath style='width:100%; height:100%')
                         p= product.price + "Fcfa"
+                button#addToCart.btn(type='button')
+                    i.fa.fa-cart-plus
