--- a/views/client/signin.pug
+++ b/views/client/signin.pug
@@ -2,14 +2,33 @@ extends clientLayout
 
 block content
 
-    #main(style='text-align:center')
-        .signin
+    #main
+        .signin(style='text-align:center')
+
+
+            h4 Vous n'avez pas encore de compte ?
+            h4
+                a(href='/signup') Creer un compte
+
+            #fb-root
+
+            hr
+
+            h4
+                b Ou
+                
             h3 Se Connecter
             form(action = "/signin" method = "POST")
-                input(name = "email" type = "email" required placeholder = "Email Address")
-                br
-                input(name = "password" type = "password" required placeholder = "Password" minlength=7)
-                br
+                .row
+                    .col-2
+                    .col-8
+                        input.form-control(name = "email" type = "email" required placeholder = "Email Address")
+                    .col-2
+                .row
+                    .col-2
+                    .col-8
+                        input.form-control(name = "password" type = "password" required placeholder = "Password" minlength=7)
+                    .col-2
                 br
                 button(type = "Submit") Sign me in!
                 br
@@ -24,10 +43,5 @@ block content
                 hr
 
 
-                br
 
-    h4 Vous n'avez pas encore de compte ?
-        a(href='/signup') Creer un compte
-
-    #fb-root
     script(async='', defer='', crossorigin='anonymous', src='https://connect.facebook.net/fr_FR/sdk.js#xfbml=1&version=v7.0&appId=901129653708849&autoLogAppEvents=1', nonce='4NoNSMF9')
