removed sign in with Facebook button

--- a/views/client/signin.pug
+++ b/views/client/signin.pug
@@ -34,13 +34,13 @@ block content
                 br
                 br
 
-                h4
-                    p
-                        b Ou
-                    //a.btn.btn-primary(href='/auth/facebook') Se connecter avec Facebook
-                    div(class="fb-login-button" data-size="large" data-button-type="continue_with" data-layout="default" data-auto-logout-link="false" data-use-continue-as="false" data-width="")
+                //- h4
+                //-     p
+                //-         b Ou
+                //-     //a.btn.btn-primary(href='/auth/facebook') Se connecter avec Facebook
+                //-     div(class="fb-login-button" data-size="large" data-button-type="continue_with" data-layout="default" data-auto-logout-link="false" data-use-continue-as="false" data-width="")
 
-                hr
+                //- hr
 
 
 
