--- a/views/client/products.pug
+++ b/views/client/products.pug
@@ -2,13 +2,92 @@ extends clientLayout
 
 block content
     h1 Resultat de la recherche ' #{search} '
-    .container-fluid
-        .row
-            each product in products
+    .flex-container.selection
+        each product,index in products
+            .product(id='product'+index)
                 a(href='/product/'+product._id)
-                    .col-sm-2
-                        p= product.name
-                        img(src=product.imgPath style='width:100%; height:100%')
-                        p= product.price + "Fcfa"
-                button#addToCart.btn(type='button')
-                    i.fa.fa-cart-plus
+                    p= product.name
+                    img(src=product.imgPath)
+                    p= product.price + "Fcfa"
+                #cartOptions
+                    .row
+                        .col-12
+                            button.addToCartButton.btn(id='addToCartButton'+index index=index type='button')
+                                i.fa.fa-cart-plus
+                        .col-4
+                        .col-4
+                            select.form-control.addToCartQty(id='addToCartQty'+index index=index productId=product._id hidden)
+                                option(value='0') 0
+                                option(value='1' selected) 1
+                                option(value='2') 2
+                                option(value='3') 3
+                                option(value='4') 4
+                                option(value='5') 5
+                                option(value='6') 6
+                                option(value='7') 7
+                                option(value='8') 8
+                                option(value='9') 9
+                                option(value='10') 10
+                        .col-4
+
+
+    script.
+
+        async function addToCartAnimation(){
+            let addToCartButtons = document.getElementsByClassName('addToCartButton')
+
+            for(button of addToCartButtons){
+                let index = button.getAttribute('index')
+                button.addEventListener('click',function(){
+                    let addToCartQty = document.getElementById('addToCartQty'+index)
+                    addToCartQty.hidden = false
+                    this.hidden = true
+                })
+            }
+
+            let addToCartQty = document.getElementsByClassName('addToCartQty')
+            for await(select of addToCartQty){
+                select.addEventListener('change',function(){
+                    let index = this.getAttribute('index')
+                    let productId = this.getAttribute('productId')
+                    let qty = this.value
+                    let addToCartButton = document.getElementById('addToCartButton'+index)
+                    if(this.value=='0'){
+                        addToCartButton.hidden = false
+                        this.hidden = true
+                        return 
+                    }                
+                    console.log(`This is the info being passed: ${productId} x${qty}`)
+                    let result = updateCart(productId,qty)
+                    addToCartButton.hidden = false
+                    this.hidden = true
+                })
+            }
+        }
+
+        addToCartAnimation()
+
+        function updateCart(productId, qty){
+            var xhr = new XMLHttpRequest();
+            xhr.open("POST", '/api/addToCart', true);
+            let data = {"productId":productId,"qty":qty}
+
+            //Send the proper header information along with the request
+            xhr.setRequestHeader("Content-Type", "application/json");
+
+            xhr.onreadystatechange = function() { // Call a function when the state changes.
+                if (this.readyState === XMLHttpRequest.DONE && this.status === 200) {
+                    console.log(this.response)
+                    console.log('Sucess')
+                    location.reload()
+                    //- alert('Article(s) rajoute(s) au panier')
+                }
+                else if(this.status !== 200){
+                    console.log('maybe an issue')
+                    alert('Une erreur a eu lieux, veuillez reesayer.')
+                }
+            }
+            xhr.send(JSON.stringify(data));
+            // xhr.send(new Int8Array());
+            // xhr.send(document);
+        }
