fixed the nav bar

--- a/views/client/partials/head.pug
+++ b/views/client/partials/head.pug
@@ -21,11 +21,11 @@
     .search-container
         form(action='/search' method='POST')
             .row
-                .col-1
-                    button(type='button' class='btn btn-dark')
-                        i.fa.fa-bars(style='color:white')
+                //- .col-1
+                //-     button(type='button' class='btn btn-dark')
+                //-         i.fa.fa-bars(style='color:white')
 
-                .col-11
+                .col-12
                     .input-group.mb-2
                         input.form-control(type='text', name='search', placeholder="Recherche de produits", aria-label="Recherche de produits", aria-describedby='basic-addon2')
                         .input-group-append
