Changed product's image style

--- a/views/client/product.pug
+++ b/views/client/product.pug
@@ -7,7 +7,7 @@ block content
                 .col-8
                     h2= product.name
                     .productImg
-                        img(src=''+product.imgPath)
+                        img.product_img(src=''+product.imgPath)
                     h3 Prix: #{product.price} FcFa
                     br
                     h3 Description de produit:
